http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-12-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.13.0


2018-11-27 niel
	Fix: New groups not respecting number of days/posts to initialise with and then starting from
		first header on the server.
2018-11-21 niel
	Fix: Correct categories table data for Book entries.
2018-11-16 niel
	Fix: Add pagination links to Alpha, Charisma, Gamma, Gentele, and Omicron Themes for Browse
		Groups page.
2018-11-11 niel
	Fix: Attempt to improve accuracy of PreDb matching. Addresses issue 2568.
2018-11-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.12.0


2018-10-30 niel
	Mrg: fix-mediainfo branch. Adds support for mediaInfo's new format in v17.12+
2018-10-27 niel
	Fix: Post-decrement (instead of pre-decrement) $total dumps counter to make it correct for
		output. This will prevent the "-1 dumps remaining message".
2018-10-23 niel
	Add: New anime title regex in PPA to capture more titles correctly.
	Chg: Altered 'Complete Sequential' to 'Custom Sequential' in tmux settings, to avoid confusion
		of people thinking it is more complete than Simple.
	Chg: Update meaning of type field in videos table.
	Add: Videos controller, model, and tests.
2018-10-17 niel
	Fix: Make generic music subject regex actually match the example. Simplify returns for
		CollectionsCleaning::generic() method.
	Fix: Remove $this->e0. No need to duplicate the constant.
2018-10-12 niel
	Chg: Rename updateTimeCheck function to updatedRecently. Change it to return true if the entry
		was updated within the last week, false otherwise.
2018-10-03 niel